k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    # define what our ClusterIP is going to give access to
    component: server
  ports:
    - port: 5000
      targetPort: 5000
