k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # Says create an ingress controller based on the nginx project
    kubernetes.io/ingress.class: nginx
    # Configure /api to route to / on server so we don't have to write /api all over our express app
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        # if anybody goes to path /, send them to the client, if request goes to /api/, send it to the server
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
